--- a/index.html
+++ b/index.html
@@ -97,17 +97,22 @@
         }
 
         div#foto {
-            padding: 10px;
+            display: flex;
+            align-items: center;
+            max-width: 1000px;
             background-color: rgb(235, 235, 235);
         }
 
         div#foto > p {
+            flex: 1px;
             padding: 45px;
             font-size: 1.5em;
         }
 
         div img {
+            width: 200px;
             border-radius: 50%;
+            padding: 10px;
         }
  
     </style>
