--- a/index.html
+++ b/index.html
@@ -113,8 +113,16 @@
             width: 200px;
             border-radius: 50%;
             padding: 10px;
+            margin-top: 1rem;
         }
- 
+
+        @media (max-width: 768px) {
+            div#foto {
+                flex-direction: column; 
+                text-align: center;     
+            }
+        }
+
     </style>
 </head>
 <body>
